kubernetes/backend_deployment.yml
apiVersion: apps/v1
kind: Deployment
namespace: mtrack
metadata:
  name: backend
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: dakshsawhneyy/mtrack-backend:latest
        ports:
        - containerPort: 4000
