kubernetes/frontend_deployment.yml
apiVersion: apps/v1
kind: Deployment
namespace: mtrack
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - image: dakshsawhneyy/mtrack-frontend:latest
        name: mtrack-frontend
        ports:
        - containerPort: 5173
