kubernetes/redis_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: mtrack
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - image: redis:latest
        name: redis
        ports:
        - containerPort: 6379
