kubernetes/backend_service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: mtrack
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
