kubernetes/redis_service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: mtrack
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
